--- a/infra/kubernetes/chart/values.yaml
+++ b/infra/kubernetes/chart/values.yaml
@@ -36,7 +36,7 @@ ingress:
   annotations:
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/spec.ingressClassName: nginx
+    kubernetes.io/ingress.class: nginx
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
 
 hpacore:
